deployment-test/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-ingress
  namespace: demo-devops-test
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: demo-devops
      port:
        number: 9000
status:
  loadBalancer: {}
